; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/wiiuse/extr_wiiuse.c_wiiuse_set_leds.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/wiiuse/extr_wiiuse.c_wiiuse_set_leds.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wiimote_t = type { i32 }

@WM_CMD_LED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @wiiuse_set_leds(%struct.wiimote_t* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.wiimote_t*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.wiimote_t* %0, %struct.wiimote_t** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.wiimote_t*, %struct.wiimote_t** %4, align 8
  %9 = icmp ne %struct.wiimote_t* %8, null
  br i1 %9, label %10, label %14

10:                                               ; preds = %3
  %11 = load %struct.wiimote_t*, %struct.wiimote_t** %4, align 8
  %12 = call i32 @WIIMOTE_IS_CONNECTED(%struct.wiimote_t* %11)
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %15, label %14

14:                                               ; preds = %10, %3
  br label %27

15:                                               ; preds = %10
  %16 = load i32, i32* %5, align 4
  %17 = and i32 %16, 240
  %18 = load %struct.wiimote_t*, %struct.wiimote_t** %4, align 8
  %19 = getelementptr inbounds %struct.wiimote_t, %struct.wiimote_t* %18, i32 0, i32 0
  store i32 %17, i32* %19, align 4
  %20 = load %struct.wiimote_t*, %struct.wiimote_t** %4, align 8
  %21 = getelementptr inbounds %struct.wiimote_t, %struct.wiimote_t* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  store i32 %22, i32* %7, align 4
  %23 = load %struct.wiimote_t*, %struct.wiimote_t** %4, align 8
  %24 = load i32, i32* @WM_CMD_LED, align 4
  %25 = load i32, i32* %6, align 4
  %26 = call i32 @wiiuse_sendcmd(%struct.wiimote_t* %23, i32 %24, i32* %7, i32 1, i32 %25)
  br label %27

27:                                               ; preds = %15, %14
  ret void
}

declare dso_local i32 @WIIMOTE_IS_CONNECTED(%struct.wiimote_t*) #1

declare dso_local i32 @wiiuse_sendcmd(%struct.wiimote_t*, i32, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
